--- a/缓存.md
+++ b/缓存.md
@@ -1,5 +1,9 @@
 # 缓存
 
+[TOC]
+
+
+
 ## 1、Redis用过哪些数据数据，以及Redis底层怎么实现
 
 ### 1、概述
@@ -760,7 +764,7 @@ memcache代码：
 > **四、双写Redis的时序图**
 
 
- 
+
 
 
 
