--- a/缓存.md
+++ b/缓存.md
@@ -1493,7 +1493,7 @@ redis_index = 用户的ID % 4 + 1;
 
 ##  9、Redis的数据淘汰策略
 
-## 简介
+### 简介
 
 redis可以通过`maxmemory <bytes>`配置项来设置允许用户使用的最大内存大小，当内存数据集大小达到一定的大小时，就会根据`maxmemory-policy noeviction`配置项配置的策略来进行数据淘汰。
 
@@ -1525,7 +1525,7 @@ redis提供了6种数据淘汰策略：
 
 ##  
 
-## 淘汰机制
+### 淘汰机制
 
 在服务器配置中保存了lru计数器lrulock，会通过定时程序serverCorn()进行定时更新
 
@@ -1582,7 +1582,7 @@ typedef struct redisDb {
 
 ###  
 
-### LRU数据淘汰机制
+#### LRU数据淘汰机制
 
 该淘汰机制是这样的：在数据集中随机挑选几个键值对，取出其中lru最大的键值对进行淘汰。
 
@@ -1701,7 +1701,7 @@ unsigned int getLRUClock(void) {
 
 ###  
 
-### TTL数据淘汰机制
+#### TTL数据淘汰机制
 
 Redis 数据集数据结构中保存了键值对过期时间的表，即 redisDb.expires，在使用 SET  命令的时候，就有一个键值对超时时间的选项。和 LRU 数据淘汰机制类似，TTL 数据淘汰机制是这样的：从过期时间 redisDB.expires  表中随机挑选几个键值对，取出其中 ttl 最大的键值对淘汰。同样你会发现，Redis  并不是保证取得所有过期时间的表中最快过期的键值对，而只是随机挑选的几个键值对中的。
 
