--- a/黑马旅游网项目笔记.md
+++ b/黑马旅游网项目笔记.md
@@ -2,11 +2,11 @@
 
 
 
-# 用户注册要点：
+# **用户注册要点**：
 
 ## 逻辑框架
 
-![1564235903059](C:\Users\Muse47\AppData\Roaming\Typora\typora-user-images\1564235903059.png)
+![1564237318545](C:\Users\Muse47\Desktop\Java-High frequency test center\assets\1564237318545.png)
 
 ## 前端-异步判断输入是否合法
 
@@ -321,8 +321,18 @@
     }
 
 
+
+
+
+
+
+
+
+
+
 # 用户登录要点：
 
 ## 逻辑框架
 
-![1564236372991](C:\Users\Muse47\AppData\Roaming\Typora\typora-user-images\1564236372991.png)
+![1564237261110](assets\1564237261110.png)
+
