--- a/黑马旅游网项目笔记.md
+++ b/黑马旅游网项目笔记.md
@@ -6,7 +6,7 @@
 
 ## 逻辑框架
 
-![1564237318545](C:\Users\Muse47\Desktop\Java-High frequency test center\assets\1564237318545.png)
+![1564237318545](assets\1564237318545.png)
 
 ## 前端-异步判断输入是否合法
 
@@ -320,8 +320,37 @@
         template.update(sql,user.getUid());
     }
 
+## Servlet-返回激活结果
 
-
+    @WebServlet("/activeUserServlet")
+    public class ActiveUserServlet extends HttpServlet {
+        protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            //1.获取激活码
+            String code = request.getParameter("code");
+            if(code != null){
+                //2.调用service完成激活
+                UserService service = new UserServiceImpl();
+                boolean flag = service.active(code);
+    
+                //3.判断标记
+                String msg = null;
+                if(flag){
+                    //激活成功
+                    msg = "激活成功，请<a href='login.html'>登录</a>";
+                }else{
+                    //激活失败
+                    msg = "激活失败，请联系管理员!";
+                }
+                response.setContentType("text/html;charset=utf-8");
+                response.getWriter().write(msg);
+            }
+    
+        }
+    
+        protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            this.doPost(request, response);
+        }
+    }
 
 
 
@@ -336,3 +365,202 @@
 
 ![1564237261110](assets\1564237261110.png)
 
+什么叫做登录和退出？
+
+> session中有user对象则为登录，没有则为退出。
+
+退出的实现步骤：
+
+> 1、访问servlet，将session销毁
+>
+> 2、跳转到登录页面
+
+## Servlet-登录功能
+
+    @WebServlet("/loginServlet")
+    public class LoginServlet extends HttpServlet {
+        protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            //1.获取用户名和密码数据
+            Map<String, String[]> map = request.getParameterMap();
+            //2.封装User对象
+            User user = new User();
+            try {
+                BeanUtils.populate(user,map);
+            } catch (IllegalAccessException e) {
+                e.printStackTrace();
+            } catch (InvocationTargetException e) {
+                e.printStackTrace();
+            }
+    
+            //3.调用Service查询
+            UserService service = new UserServiceImpl();
+            User u  = service.login(user);
+    
+            ResultInfo info = new ResultInfo();
+    
+            //4.判断用户对象是否为null
+            if(u == null){
+                //用户名密码或错误
+                info.setFlag(false);
+                info.setErrorMsg("用户名密码或错误");
+            }
+            //5.判断用户是否激活
+            if(u != null && !"Y".equals(u.getStatus())){
+                //用户尚未激活
+                info.setFlag(false);
+                info.setErrorMsg("您尚未激活，请激活");
+            }
+            //6.判断登录成功
+            if(u != null && "Y".equals(u.getStatus())){
+                request.getSession().setAttribute("user",u);//登录成功标记
+    
+                //登录成功
+                info.setFlag(true);
+            }
+    
+            //响应数据
+            ObjectMapper mapper = new ObjectMapper();
+    
+            response.setContentType("application/json;charset=utf-8");
+            mapper.writeValue(response.getOutputStream(),info);
+    
+        }
+    
+        protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            this.doPost(request, response);
+        }
+    }
+
+
+## Servlet-退出功能
+
+    @WebServlet("/exitServlet")
+    public class ExitServlet extends HttpServlet {
+        protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            //1.销毁session
+            request.getSession().invalidate();
+    
+            //2.跳转登录页面
+            response.sendRedirect(request.getContextPath()+"/login.html");
+        }
+    
+        protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            this.doPost(request, response);
+        }
+    }
+
+
+
+
+# 优化Servlet
+
+## 逻辑框架
+
+**意义**：减少Servlet的数量，让项目结构看起来更简洁
+
+**核心方法**：利用反射机制抽取各个Servlet中的方法
+
+![1564245858583](assets\1564245858583.png)
+
+
+
+    public class BaseServlet extends HttpServlet {
+    
+        @Override
+        protected void service(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        
+            //System.out.println("baseServlet的service方法被执行了...");
+    
+            //完成方法分发
+            //1.获取请求路径
+            String uri = req.getRequestURI(); //   /travel/user/add
+            System.out.println("请求uri:"+uri);//  /travel/user/add
+            
+            //2.获取方法名称
+            String methodName = uri.substring(uri.lastIndexOf('/') + 1);
+            System.out.println("方法名称："+methodName);
+            
+            //3.获取方法对象Method
+            //谁调用我？我代表谁
+            System.out.println(this);
+            //UserServlet的对象cn.itcast.travel.web.servlet.UserServlet@4903d97e
+            try {
+                //获取方法
+                Method method = this.getClass().getMethod(methodName, HttpServletRequest.class, HttpServletResponse.class);
+                
+            //4.执行方法
+            //暴力反射
+          //method.setAccessible(true);
+            method.invoke(this,req,resp);
+            } catch (NoSuchMethodException e) {
+                e.printStackTrace();
+            } catch (IllegalAccessException e) {
+                e.printStackTrace();
+            } catch (InvocationTargetException e) {
+                e.printStackTrace();
+            }
+        }
+
+​    UserServlet继承BaseServlet，在同一个模块下将所有功能放入同一个Servlet（同时将html中的路径修改为/user/....）
+
+    @WebServlet("/user/*") // /user/add /user/find
+    public class UserServlet extends BaseServlet {
+    
+        //声明UserService业务对象
+        private UserService service = new UserServiceImpl();
+    
+        /**
+         * 注册功能
+         * @param request
+         * @param response
+         * @throws ServletException
+         * @throws IOException
+         */
+        public void regist(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+           ......
+        }
+    
+        /**
+         * 登录功能
+         * @param request
+         * @param response
+         * @throws ServletException
+         * @throws IOException
+         */
+        public void login(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+           ......
+        }
+    
+        /**
+         * 查询单个对象
+         * @param request
+         * @param response
+         * @throws ServletException
+         * @throws IOException
+         */
+        public void findOne(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+           ......
+        }
+    
+        /**
+         * 退出功能
+         * @param request
+         * @param response
+         * @throws ServletException
+         * @throws IOException
+         */
+        public void exit(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            ......
+        }
+    
+        /**
+         * 激活功能
+         * @param request
+         * @param response
+         * @throws ServletException
+         * @throws IOException
+         */
+        public void active(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            ......
+        }
+    }
