--- a/今天做了什么？.md
+++ b/今天做了什么？.md
@@ -27,3 +27,67 @@
 知道自己要做什么吗？ 差点迈错步子->清醒
 
 今天是糟糕的一天，但是自己在认识到自己迈错步子还是能够即使纠正，也不算太过失败。
+
+
+
+
+
+## 10.13
+
+学习要点：spring-mvc.xml
+
+​				1、扫描controller注解
+
+​				2、配置视图解析器
+
+​				3、禁止静态资源过滤
+
+​				4、开启MVC注解支持
+
+​				5、支持AOP注解支持
+
+审判：文明6打到凌晨6点
+
+
+
+评价：
+
+学习：B-
+
+锻炼：轮空
+
+意志力：B-
+
+FLAG：打完明天等小泥过来再打文明
+
+
+
+
+
+## 10.14
+
+还是天崩的感觉。
+
+玩了一天文明6巨大优势最后被加拿大外交胜利了。不能老是觉得打游戏是莫大的罪恶感，还是放下成见好好总结一下玩了什么。
+
+这个游戏有多种取胜方式，例如科技甩别人几个世纪科技碾压（世界核平），宗教胜利（让所有人都相亲相爱？），旅游胜利（？）还有这次让我突然暴毙的外交胜利。
+
+总结一下游戏感受，前期开荒时候比较有趣，一人一狗开局的感觉，杀野蛮人，选择据点，发现奇观，都是很有趣的体验。中期开始城邦开始变多，要根据具体情况选择不同的路线，然而我这次运气好比较碾压都没怎么仔细考虑应该走什么路线。只是在前期细节上会判断一下，慢慢就把雪球滚起来了。游戏后期是我感觉最无聊的时候。因为城邦太多每个城邦我分不清楚应该是干什么收益最大，所以基本上就是用一个城邦复制粘贴的套路，该出兵出兵，不用打架时候就大家一起该升级升级，有什么点什么，就比较无趣。明显是我不会玩后期吧，但是看到自己那么碾压也不想怎么仔细去思考了，整个大陆基本上都是我的城邦。遇神杀神。所以就是说我是暴毙了，莫名其妙被外交胜利，不然的话武力值没人搞得过我，科技点又最高，等着一波世界核平就完事。
+
+说点游戏本身以外的事情，一局20小时一天时间没有学习。收益毋庸置疑是没有巅峰学习状态时候高。不过很多时候就是要做点不相干的事情才能找到新的灵感，一天到晚对这代码也不知道自己到底是真的会了还是假的会。跳出来做一个局外人重新审视一下自己的水平。长时间学习和健身比较像，刚学完的时候觉得自己什么都懂，健身完觉得自己肌肉比谁都牛逼。然而事情并不是这样，遗忘的速度太快了，肌肉过了兴奋状态也萎了。
+
+今天也没跑步，因为真的是想今天打完明天就不管了。350+波暴毙，也算是粗略体验了一下文明6的全貌。全新的游戏体验全新的版本。我是真的没有玩过类似的游戏，还是有所收获吧。
+
+明天又要去房管局办合同备案，希望自己再次进入学习状态，不需要很用力，但是要像长跑那样，匀速前进，不卑不亢。
+
+
+
+评价：
+
+学习：？
+
+锻炼：轮空
+
+意志力：B-
+
+FLAG：明天学习5小时，跑步
