--- a/今天做了什么？.md
+++ b/今天做了什么？.md
@@ -91,3 +91,43 @@ FLAG：打完明天等小泥过来再打文明
 意志力：B-
 
 FLAG：明天学习5小时，跑步
+
+
+
+## 10.14
+
+想了想应该怎样写，还是从时间线开始写比较有条理和容易整理思路。
+
+由于昨天是为了打文明6熬夜导致萎靡不振的一天，所以今天睡到了9点半，早上还鸽了政务局约到下午才去。然后是看视频学习到一点钟，因为早餐吃了饺子比较饱所以索性不吃午饭。
+
+学习知识整理：
+
+​		1、编写了DateUtils工具类，使Date和String类型之间能够转换，为的是Product中的departureTime字段，实现方式是利用了SimpleDateFormat中的format(date)和parse(pattern)方法，前者转String后者Date。
+
+​		2、还有很多MyBatis的注解不了解用途，例如@One @Many 还有在dao上直接用@Select等。另外之前没注意多表查询的操作，FLAG:希望明天能整理一下。
+
+​		3、算是重新温习一遍Controller->Service->Dao
+
+下午一点出门，两点半到政务中心。感慨一下外面世界的变化，5年没去过番禺广场，通俗点讲就是发现番禺越来越高b格了，起了永旺，车上的好车也多了，人也多了。城市发展是真的快，一不小心就感觉自己追不上周围事物的变化了。还是不要满足于眼前，要有远见一点，并且付诸实际西东，也就是战略目光要远大，同时工业科学经济要搞起来。
+
+腾讯视频对NBA恢复转播，新闻也很少看到，算是冷处理了。人民的议论或者是情怀在国家的进程里并非一文不值，但是当下有更重要的事情去解决。美国刚宣布贸易战停战，我方可能也是想不在弄出什么争端所以对此次事件进行冷处理。开始我觉得央视媒体和腾讯有点打自己的脸，但仔细一看当初他们也只是说暂停合作。这一手太极是真的厉害，但15亿刀也不是少数目。只能说一切都在国家掌控中，一切合乎常理。只是热血的网民一时义愤填膺。我们不是棋子，这个事件也没有把我们当枪使，只是我们懂得还太少，目光没有大佬那么长远。确实国家的做法，或者说这招太极拳，打的是真的高。要学习的东西还是太多了，不要老喷国家怎样怎样，别人是真的老道。
+
+李永乐老师解读了为什么日本房价会崩溃。一切还是要从二战结束的美国说起，美国当了老大之后制定了布雷顿森林体系，宣布了美元成为国际通用货币，同时因为美国在二战期间成为中立国家并没有收到战争影响，安心向其他国家贩卖军火转的盆满钵满，所以美元升值。升值导致所有国家都出口美国，导致美国贸易逆差，商品进来了买了更多的东西，但美国的东西卖得没那么多。后来为了扭转逆差开始收关税，因为日本当时是美国的跟班小弟，而且日本家电优质，一直出口美国，这一波操作导致日本很伤。。。
+
+故事太长了讲不完，长话短说说说收获。
+
+​		1、升值贬值都是正常的，银行调高利率会促进大家往银行存钱（废话？）
+
+​		2、还有很多东西要仔细去看，下次再详细说23333
+
+
+
+评价：
+
+学习：B
+
+锻炼：A-
+
+意志力：B+
+
+FLAG：明天把多表查询好好看看
